examples/invalid/invalid_return1.vbr
track f(x: quarter): quarter {
    if (x > 0) {
        |>("mayor a 0")|
        ||
    } else {
        |>("No Positivo")|
        x||
    }
}

moderato() {
    f(10)|
}